2009-02-11  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	NB#96795

	This is an old bug (tasks button accessible while sysmodal in front)
	but reappeared with HdTitleBar.  HDRM made the wrong actors unreactive.

	* src/home/hd-title-bar.c:
	  Removed dummy HdTitleBar::btn_switcher and ::btn_launcher, which
	  were taken over by buttons[BTN_SWITCHER] and buttons[BTN_LAUNCHER].
	  Make HDRM use these latter actors.
	* src/home/hd-render-manager.c:
	  Don't change the visibility of HDRM_BUTTON_TASK_NAV and
	  HDRM_BUTTON_LAUNCHER but leave it completely up to HdTitleBar.
	  Don't reparent them either.

2009-02-11  Marc Ordinas i Llopis  <marc.ordinasillopis@collabora.co.uk>

	Make application killing dialog look for the app's localized name.
	NB#89600

	* src/launcher/hd-launcher-item.c: Added method to get the localized name
	for a HdLauncherItem.
	* src/launcher/hd-launcher-item.h:
	* src/launcher/hd-launcher.c: Get the localized name directly.
	* src/mb/hd-comp-mgr.c: Added method to get the localized name of the app
	if it's present.
	* src/mb/hd-comp-mgr.h:
	* src/mb/hd-wm.c: Use the app's localized name if it's known.

2009-02-11  Gordon Williams <gordon.williams@collabora.co.uk>

	* src/home/hd-title-bar.c:
	  Now don't error if no hd-decor, and instead remove the title bar
	* src/tidy/tidy-mem-texture.c (Added)
	* src/tidy/tidy-mem-texture.h (Added)
	* src/tidy/Makefile.am:
	  Added tiled texture that works from a memory area
	* src/mb/hd-remote-texture.c (Added)
	* src/mb/hd-remote-texture.h (Added)
	* src/mb/Makefile.am:
	  New Remote texture window type that handles rendering a shared
	  memory area as a window.
	* src/mb/hd-atoms.c
	* src/mb/hd-atoms.h:
	  New atoms for remote texture control via X
	* src/mb/hd-wm.c
	* src/mb/hd-wm.h:
	  Added HdWmClientTypeRemoteTexture window type

2009-02-11  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	* src/mb/hd-comp-mgr.c (hd_comp_mgr_effect):
	  Put back accidentally disabled slide-in transition