@@ -61,6 +61,7 @@ hd_atoms_init (Display * xdpy, Atom * atoms)
     "_HILDON_TEXTURE_CLIENT_MESSAGE_DAMAGE",
     "_HILDON_TEXTURE_CLIENT_MESSAGE_SHOW",
     "_HILDON_TEXTURE_CLIENT_MESSAGE_POSITION",
+    "_HILDON_TEXTURE_CLIENT_MESSAGE_OFFSET",
     "_HILDON_TEXTURE_CLIENT_MESSAGE_SCALE",
     "_HILDON_TEXTURE_CLIENT_MESSAGE_PARENT",
     "_HILDON_TEXTURE_CLIENT_READY",
