@@ -57,6 +57,7 @@ typedef enum HdAtoms
   HD_ATOM_HILDON_TEXTURE_CLIENT_MESSAGE_DAMAGE,
   HD_ATOM_HILDON_TEXTURE_CLIENT_MESSAGE_SHOW,
   HD_ATOM_HILDON_TEXTURE_CLIENT_MESSAGE_POSITION,
+  HD_ATOM_HILDON_TEXTURE_CLIENT_MESSAGE_OFFSET,
   HD_ATOM_HILDON_TEXTURE_CLIENT_MESSAGE_SCALE,
   HD_ATOM_HILDON_TEXTURE_CLIENT_MESSAGE_PARENT,
   HD_ATOM_HILDON_TEXTURE_CLIENT_READY,
